# cftools

./: .gitignore  README.md  cftools.cabal
app/regex-equiv/: Main.hs
src/: Algo.hs  Equivalence.hs  Examples.hs  GRegexp.hs  Grammar.hs  Regexp.hs  Regexp2.hs  Tests.hs  Util.hs
src/Regexp/: Parser.hs
