name:                cftools
version:             0.1.0.0
synopsis:            Tools for context-free grammars
description:         Please see README.md
homepage:            http://github.com/peterthiemann/cftools#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Thiemann
maintainer:          https://github.com/peterthiemann
copyright:           (C) 2013 Peter Thiemann
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  exposed-modules:     Algo
                     , Equivalence
                     , Grammar
                     , Regexp
  other-modules:       Util
