name:                cftools
version:             0.1.0.0
synopsis:            Tools for context-free grammars
description:         Please see README.md
homepage:            http://github.com/peterthiemann/cftools#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Thiemann
maintainer:          https://github.com/peterthiemann
copyright:           (C) 2013 Peter Thiemann
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , attoparsec >= 0.12 && < 0.14
                     , text >= 1.0 && < 1.3
                     , semigroups >= 0.15 && < 0.19
  exposed-modules:     Algo
                     , Equivalence
                     , Grammar
                     , Regexp
                     , Regexp.Parser
  other-modules:       Util

executable regex-equiv
  hs-source-dirs:      src, app/regex-equiv
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , attoparsec >= 0.12 && < 0.14
                     , text >= 1.0 && < 1.3
                     , semigroups >= 0.15 && < 0.19
